--- a/css/calculadora2.css
+++ b/css/calculadora2.css
@@ -8,7 +8,7 @@
     display: grid;
     /*grid-template-columns: 75px 75px 75px 75px;*/
     grid-template-columns: repeat(4, 75px);
-    grid-template-rows: 100px repeat(6, 75px);
+    grid-template-rows: 100px repeat(5, 75px);
     background-color: #00916e;
     padding: 15px;
     border-radius: 22px;
@@ -24,13 +24,33 @@
     text-align: right;
     box-shadow: 0px 0px 0px 10px #00000033;
     color: #18bb95;
+    font-size: 20px;
 }
 
 button {
+    cursor: pointer;
     margin: 5px;
     padding: 0;
-    border-radius: 32px;
+    border-radius: 20px;
     border: none;
     background-color: #18bb95;
     box-shadow: 5px 5px 10px 2px #00000040;
+    font-size: 20px;
+}
+
+button:active {
+    background-color: #006f54;
+}
+
+.col-2 {
+    grid-column: span 2;
+}
+
+body {
+    background-color: #224870;
+}
+
+* {
+    color: white;
+    font-family: monospace;
 }
